--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,9 @@
       "use": "@vercel/node"
     }
   ],
+  "hooks": {
+    "build": "npm run build"
+  },
   "routes": [
     {
       "src": "/(.*)",
