--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-node-api",
+  "name": "my-node-scraper-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "api/index.js",
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
@@ -11,6 +11,6 @@
   },
   "scripts": {
     "postinstall": "npm install puppeteer-core chrome-aws-lambda cheerio",
-    "start": "node api/index.js"
+    "start": "nodemon api/index.js"
   }
 }
