--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-node-scraper-api",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "index.js",
   "dependencies": {
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
